--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.8.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
